--- a/website/integrations/services/apache-guacamole/index.mdx
+++ b/website/integrations/services/apache-guacamole/index.mdx
@@ -70,3 +70,7 @@ openid-redirect-uri=https://guacamole.company/ # This must match the redirect UR
 
   </TabItem>
 </Tabs>
+
+## User articles
+
+- [Providing Guacamole with a custom username set in Authentik user's attributes](https://dae.me/blog/2705/authentik-custom-username-oauth-apache-guacamole-property-mapping/).
